--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-base64": "0.0.2",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.3",
     "react-native-maps": "^0.27.1",
     "react-native-paper": "^4.0.0",
     "react-native-phone-call": "^1.0.9",
